redirect to /home

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Yibang's test website
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Profile Website | Yibang Chen</title>
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0;url=http://redirect-to-this-page.com" />
+    
+    <meta name="viewport" content="width=device-width">
+    <meta name="keywords" content="Software developer, Economist, University of Pennsylvania, Web developer, User Interface, User Experience developer, Artificial Intelligence, Machine Learning, Los Angeles, California ">
+    <meta name="description" content="Yibang Chen is a talented software engineer looking for a role in Los Angeles">
+    <link rel="stylesheet" href="index.css"> 
+  </head>
+  <body></body>
+</html>
