redirect to /home

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Profile Website | Yibang Chen</title>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0;url=http://redirect-to-this-page.com" />
-    
+    <meta http-equiv="refresh" content="0;url=http://yibangchen.github.io/home" />
+
     <meta name="viewport" content="width=device-width">
     <meta name="keywords" content="Software developer, Economist, University of Pennsylvania, Web developer, User Interface, User Experience developer, Artificial Intelligence, Machine Learning, Los Angeles, California ">
     <meta name="description" content="Yibang Chen is a talented software engineer looking for a role in Los Angeles">
